[feature] - responsive design added to section 3

--- a/scss/_section2.scss
+++ b/scss/_section2.scss
@@ -31,6 +31,7 @@
         margin-left: 10px;
         font-family: "dosisRegular";
         text-align: justify;
+        font-size: .8rem;
       }
     }
     .A{
@@ -78,6 +79,7 @@
         }
         .section2Text{
           margin-left: 20px;
+          font-size: 1rem;
         }
       }
     }
