--- a/src/App.css
+++ b/src/App.css
@@ -223,7 +223,8 @@ html a {
       .section2Container .section2DescriptionItemsContainer .section2ItemContainer .section2Text {
         margin-left: 10px;
         font-family: "dosisRegular";
-        text-align: justify; }
+        text-align: justify;
+        font-size: .8rem; }
     .section2Container .section2DescriptionItemsContainer .A {
       grid-area: A; }
     .section2Container .section2DescriptionItemsContainer .B {
@@ -257,94 +258,129 @@ html a {
         .section2Container .section2DescriptionItemsContainer .section2ItemContainer .section2Item {
           font-size: 1.87rem; }
         .section2Container .section2DescriptionItemsContainer .section2ItemContainer .section2Text {
-          margin-left: 20px; } }
+          margin-left: 20px;
+          font-size: 1rem; } }
 
 .section3Container {
   position: relative;
   background-color: #ede9e3;
-  padding: 30px 50px 50px 50px; }
-  .section3Container .section3TitleContainer {
-    margin: 40px 100px 60px 100px; }
-    .section3Container .section3TitleContainer .section3Title {
-      font-family: "loveloBlack";
-      font-size: 1.37rem;
-      text-align: center;
-      margin-bottom: 25px; }
-    .section3Container .section3TitleContainer .subTitleContainer {
-      padding: 0px 70px; }
-      .section3Container .section3TitleContainer .subTitleContainer .section3SubTitle {
-        font-family: "dosisRegular";
-        font-size: 1rem;
-        text-align: justify;
-        margin-bottom: 10px; }
+  padding: 10px 0px; }
+  .section3Container .section3TitleContainer .section3Title {
+    font-family: "loveloBlack";
+    font-size: 1.2rem;
+    text-align: center;
+    margin-bottom: 10px; }
+  .section3Container .section3TitleContainer .subTitleContainer {
+    padding: 0px 20px; }
+    .section3Container .section3TitleContainer .subTitleContainer .section3SubTitle {
+      font-family: "dosisRegular";
+      font-size: .8rem;
+      text-align: justify;
+      margin-bottom: 10px; }
   .section3Container .professionalsContainer {
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly; }
     .section3Container .professionalsContainer .professionalContainer {
       position: relative;
       display: flex;
-      justify-content: center; }
-    .section3Container .professionalsContainer .maidaContainer {
-      width: 27rem;
-      height: 36rem;
-      border-radius: 10px;
-      padding: 50px 100px;
-      background-image: url("../src/images/magda.jpeg");
-      background-size: contain;
-      display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center; }
+    .section3Container .professionalsContainer .maidaContainer {
+      width: 100%;
+      height: calc(100vw / 0.75);
+      border-radius: 10px;
+      background-image: url("../src/images/magda.jpeg");
+      background-size: contain;
       opacity: .5; }
       .section3Container .professionalsContainer .maidaContainer:hover {
         opacity: 1; }
+    .section3Container .professionalsContainer .cokeContainer {
+      width: 100%;
+      height: calc(100vw / 0.75);
+      background-image: url("../src/images/jorge.jpeg");
+      border-radius: 10px;
+      background-size: contain;
+      opacity: .5; }
+      .section3Container .professionalsContainer .cokeContainer:hover {
+        opacity: 1; }
     .section3Container .professionalsContainer .professionalDescriptionContainer {
-      position: absolute;
-      bottom: -150px;
-      padding-left: 10px;
-      padding-right: 10px;
+      margin: 10px;
       background-color: rgba(163, 143, 133, 0.5);
-      border-radius: 10px; }
+      border-radius: 10px;
+      padding-left: 20px;
+      padding-right: 20px; }
       .section3Container .professionalsContainer .professionalDescriptionContainer .professionalName {
         font-family: "loveloBlack";
-        padding: 5px 15px;
-        font-size: 1.18rem;
+        padding: 5px 10px;
+        font-size: 1rem;
         color: #fff;
         text-align: center; }
       .section3Container .professionalsContainer .professionalDescriptionContainer .professionalDescription {
         font-family: "dosisSemiBold";
         padding-bottom: 10px;
-        font-size: 1rem;
+        font-size: .8rem;
         color: #ede9e3;
         text-align: center; }
       .section3Container .professionalsContainer .professionalDescriptionContainer .seeMore {
         cursor: pointer; }
         .section3Container .professionalsContainer .professionalDescriptionContainer .seeMore:hover {
           color: #fff; }
-    .section3Container .professionalsContainer .cokeContainer {
-      position: relative;
-      width: 27rem;
-      height: 36rem;
-      padding: 50px 100px;
-      background-image: url("../src/images/jorge.jpeg");
-      border-radius: 10px;
-      background-size: contain;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      opacity: .5; }
-      .section3Container .professionalsContainer .cokeContainer:hover {
-        opacity: 1; }
   .section3Container .quoteContainer {
-    margin-top: 50px;
-    display: flex;
-    justify-content: center; }
+    margin-top: 10px;
+    padding-right: 20px;
+    padding-left: 20px; }
   .section3Container .videoContainer {
-    padding-top: 200px;
     display: flex;
     justify-content: center; }
     .section3Container .videoContainer video {
+      width: 80%;
+      height: calc(100vw / 1.6);
       border-radius: 20px;
       object-fit: fill; }
+
+@media only screen and (min-width: 1024px) {
+  .section3Container {
+    padding: 30px 50px 50px 50px; }
+    .section3Container .section3TitleContainer {
+      margin: 40px 100px 60px 100px; }
+      .section3Container .section3TitleContainer .section3Title {
+        font-size: 1.37rem;
+        margin-bottom: 25px; }
+      .section3Container .section3TitleContainer .subTitleContainer {
+        padding: 0px 70px; }
+        .section3Container .section3TitleContainer .subTitleContainer .section3SubTitle {
+          font-size: 1rem; }
+    .section3Container .professionalsContainer {
+      flex-direction: row; }
+      .section3Container .professionalsContainer .professionalContainer {
+        flex-direction: row; }
+      .section3Container .professionalsContainer .maidaContainer {
+        width: 27rem;
+        height: 36rem; }
+      .section3Container .professionalsContainer .cokeContainer {
+        width: 27rem;
+        height: 36rem; }
+      .section3Container .professionalsContainer .professionalDescriptionContainer {
+        margin: 0;
+        position: absolute;
+        bottom: -150px;
+        padding-left: 10px;
+        padding-right: 10px; }
+        .section3Container .professionalsContainer .professionalDescriptionContainer .professionalName {
+          padding: 5px 15px;
+          font-size: 1.18rem; }
+        .section3Container .professionalsContainer .professionalDescriptionContainer .professionalDescription {
+          font-size: 1rem; }
+    .section3Container .quoteContainer {
+      margin-top: 50px;
+      text-align: center; }
+    .section3Container .videoContainer {
+      padding-top: 200px; }
+      .section3Container .videoContainer video {
+        width: 400px;
+        height: 250px; } }
 
 .footerContainer .footerTextContainer {
   position: relative;
