--- a/scss/_section3.scss
+++ b/scss/_section3.scss
@@ -84,6 +84,7 @@
     margin-top: 10px;
     padding-right: 20px;
     padding-left: 20px;
+    font-size: .8rem;
   }
   .videoContainer{
     display: flex;
@@ -144,6 +145,7 @@
     .quoteContainer{
       margin-top: 50px;
       text-align: center;
+      font-size: 1rem
     }
     .videoContainer{
       padding-top: 200px; 
