--- a/scss/_seeMore.scss
+++ b/scss/_seeMore.scss
@@ -1,9 +1,9 @@
 .seeMoreContainer{
   position: absolute;
   z-index: 2000;
-  top: 120px;
-  left: 13%;
-  width: 74%;
+  top: 45px;
+  left: 2%;
+  width: 96%;
   background-color: $isabeline;
   border-radius: 20px;
   box-shadow: 0px 0px 13px 8px rgba(163, 143, 133,.35);
@@ -15,34 +15,33 @@
   .closeBtn{
     color: $cinereous;
     position: absolute;
-    right: 30px;
-    top: 20px;
     font-family: "LoveloBlack";
     cursor: pointer;
-    font-size: 1.25rem;
     z-index: 200;
+    right: 10px;
+    top: 10px;
+    font-size: 1.1rem;
   }
   h2{
     text-align: center;
     font-family: "loveloBlack";
-    padding-top: 30px;
-    font-size: 1.87rem;
     color: $cinereous;
+    padding-top: 5px;
+    font-size: 1.3rem;
   }
   h3{
     text-align: center;
     font-family: "dosisRegular";
-    padding: 30px 0px;
-    font-size: 1.5rem;
     color: $cinereous;
+    padding: 10px 0px;
+    font-size: 1rem;
   }
   .teamDescriptionContainer{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(7, align-items);
-    row-gap: 30px;
-    column-gap: 100px;
-    padding: 20px 50px;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(14, align-items);
+    row-gap: 10px;
+    padding: 10px 10px 10px 0px;
     .teamDescriptionItemContainer{
       display: flex;
       .teamDescriptionItem{
@@ -55,8 +54,45 @@
       padding-left: 10px;
       color: $dark;
       font-family: "dosisRegular";
-      font-size: 1rem;
       text-align: justify;
+      font-size: .8rem;
+    }
+  }
+}
+
+
+@media only screen and (min-width: 1024px) {
+  .seeMoreContainer{
+    top: 120px;
+    left: 13%;
+    width: 74%;
+    .closeBtn{
+      right: 25px;
+      top: 15px;
+      font-size: 1.5rem;
+    }
+    h2{
+      padding-top: 30px;
+      font-size: 1.87rem;
+    }
+    h3{
+      padding: 30px 0px;
+      font-size: 1.5rem;
+    }
+    .teamDescriptionContainer{
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: repeat(7, align-items);
+      row-gap: 30px;
+      column-gap: 100px;
+      padding: 20px 50px;
+      .teamDescriptionItemContainer{
+        .teamDescriptionItem{
+          
+        }
+      }
+      .teamDescriptionText{
+        font-size: 1rem;
+      }
     }
   }
 }
