--- a/src/App.css
+++ b/src/App.css
@@ -773,9 +773,9 @@ html a {
 .seeMoreContainer {
   position: absolute;
   z-index: 2000;
-  top: 120px;
-  left: 13%;
-  width: 74%;
+  top: 45px;
+  left: 2%;
+  width: 96%;
   background-color: #ede9e3;
   border-radius: 20px;
   box-shadow: 0px 0px 13px 8px rgba(163, 143, 133, 0.35);
@@ -787,31 +787,30 @@ html a {
   .seeMoreContainer .closeBtn {
     color: #a38f85;
     position: absolute;
-    right: 30px;
-    top: 20px;
     font-family: "LoveloBlack";
     cursor: pointer;
-    font-size: 1.25rem;
-    z-index: 200; }
+    z-index: 200;
+    right: 10px;
+    top: 10px;
+    font-size: 1.1rem; }
   .seeMoreContainer h2 {
     text-align: center;
     font-family: "loveloBlack";
-    padding-top: 30px;
-    font-size: 1.87rem;
-    color: #a38f85; }
+    color: #a38f85;
+    padding-top: 5px;
+    font-size: 1.3rem; }
   .seeMoreContainer h3 {
     text-align: center;
     font-family: "dosisRegular";
-    padding: 30px 0px;
-    font-size: 1.5rem;
-    color: #a38f85; }
+    color: #a38f85;
+    padding: 10px 0px;
+    font-size: 1rem; }
   .seeMoreContainer .teamDescriptionContainer {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(7, align-items);
-    row-gap: 30px;
-    column-gap: 100px;
-    padding: 20px 50px; }
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(14, align-items);
+    row-gap: 10px;
+    padding: 10px 10px 10px 0px; }
     .seeMoreContainer .teamDescriptionContainer .teamDescriptionItemContainer {
       display: flex; }
       .seeMoreContainer .teamDescriptionContainer .teamDescriptionItemContainer .teamDescriptionItem {
@@ -822,8 +821,32 @@ html a {
       padding-left: 10px;
       color: #212121;
       font-family: "dosisRegular";
-      font-size: 1rem;
-      text-align: justify; }
+      text-align: justify;
+      font-size: .8rem; }
+
+@media only screen and (min-width: 1024px) {
+  .seeMoreContainer {
+    top: 120px;
+    left: 13%;
+    width: 74%; }
+    .seeMoreContainer .closeBtn {
+      right: 25px;
+      top: 15px;
+      font-size: 1.5rem; }
+    .seeMoreContainer h2 {
+      padding-top: 30px;
+      font-size: 1.87rem; }
+    .seeMoreContainer h3 {
+      padding: 30px 0px;
+      font-size: 1.5rem; }
+    .seeMoreContainer .teamDescriptionContainer {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: repeat(7, align-items);
+      row-gap: 30px;
+      column-gap: 100px;
+      padding: 20px 50px; }
+      .seeMoreContainer .teamDescriptionContainer .teamDescriptionText {
+        font-size: 1rem; } }
 
 .seeMoreClosed {
   animation: fadeOut 1s ease-in-out backwards; }
