--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  width: 38%;
+  width: 100%;
   height: 100%;
   background-color: $cinereous;
   z-index: 10001;
@@ -10,20 +10,20 @@
   .closeBtn{
     color: $light;
     position: absolute;
-    right: 30px;
-    top: 20px;
     font-family: "LoveloBlack";
     cursor: pointer;
-    font-size: 1.25rem;
     z-index: 200;
+    right: 15px;
+    top: 10px;
+    font-size: 1rem;
   }
   .sidebarContainer{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 2fr;
-    row-gap: 50px;
+    grid-template-rows: .8fr 2fr;
     align-items: center;
     height: 100%;
+    row-gap: 0px;
     .sidebarTitleContainer{
       height: 100%;
       width: 100%;
@@ -46,19 +46,19 @@
       .sidebarTitle{
         color: $light;
         font-family: "loveloBlack";
-        font-size: 2.18rem;
         position: relative;
+        font-size: 1.8rem;
       }
       .sidebarSubTitle{
         position: relative;
         color: $light;
         font-family: "dosisRegular";
-        font-size: 1.25rem;
+        font-size: 1rem;
       }
     }
     .sidebarFormContainer{
-      padding-left: 10%;
-      padding-right: 10%;
+      padding-left: 2%;
+      padding-right: 2%;
       form{
         display: flex;
         flex-direction: column;
@@ -70,28 +70,31 @@
           padding: 2px 10px;
           margin-bottom: 10px;
           font-family: "dosisRegular";
-          font-size: 0.93rem;
+          font-size: 0.8rem;
         }
         textarea{
-          margin-bottom: 10px;
-          padding: 5px 10px;
-          height: 75px;
           resize: none;
           font-family: "dosisRegular";
+          height: 70px;
+          padding: 5px 10px;
+          margin-bottom: 10px;
+          font-size: 0.8rem;
         }
         select{
           padding: 5px 10px;
           font-family: "dosisRegular";
           margin-bottom: 10px;
+          font-size: 0.8rem;
         }
         .buttonSubmit{
-          border-radius: 10px;
-          margin-top: 20px;
-          padding: 10px 5px;
           background-color: $paleDogwood;
           color: $light;
           border-color: $cinereous;
           font-family: "dosisMedium";
+          border-radius: 10px;
+          margin-top: 10px;
+          padding: 8px 0px;
+          font-size: .9rem;
           &:hover{
             background-color: $almond;
             color: $dark;
@@ -99,10 +102,70 @@
         }
       }
       .sidebarDescription{
-        padding-top: 15px;
         text-align: center;
         color: $light;
         font-family: "dosisRegular";
+        padding-top: 10px;
+        font-size: .8rem;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .sidebar { 
+    width: 38%;
+    .closeBtn{
+      right: 30px;
+      top: 15px;
+      font-size: 1.55rem;
+    }
+    .sidebarContainer{
+      grid-template-rows: 1fr 2fr;
+      row-gap: 40px;
+      .sidebarTitleContainer{
+        &:before{
+
+        } 
+        .sidebarTitle{
+          font-size: 2.18rem;
+        }
+        .sidebarSubTitle{
+          font-size: 1.25rem;
+        }
+      }
+      .sidebarFormContainer{
+        padding-left: 10%;
+        padding-right: 10%;
+        form{
+          .nameSurnameContainer{
+
+          }
+          input{
+            font-size: 0.93rem;
+          }
+          textarea{
+            height: 75px;
+            padding: 5px 10px;
+            margin-bottom: 10px;
+            font-size: 0.93rem;
+          }
+          select{
+            font-size: 0.93rem;
+          }
+          .buttonSubmit{
+            margin-top: 20px;
+            padding: 10px 5px;
+            font-size: 1rem;
+            &:hover{
+
+            }
+          }
+        }
+        .sidebarDescription{
+          padding-top: 15px;
+          font-size: 1rem;
+        }
       }
     }
   }
