--- a/src/App.css
+++ b/src/App.css
@@ -489,7 +489,7 @@ html a {
   position: fixed;
   top: 0;
   right: 0;
-  width: 38%;
+  width: 100%;
   height: 100%;
   background-color: #a38f85;
   z-index: 10001;
@@ -497,19 +497,19 @@ html a {
   .sidebar .closeBtn {
     color: #fff;
     position: absolute;
-    right: 30px;
-    top: 20px;
     font-family: "LoveloBlack";
     cursor: pointer;
-    font-size: 1.25rem;
-    z-index: 200; }
+    z-index: 200;
+    right: 15px;
+    top: 10px;
+    font-size: 1rem; }
   .sidebar .sidebarContainer {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 2fr;
-    row-gap: 50px;
+    grid-template-rows: .8fr 2fr;
     align-items: center;
-    height: 100%; }
+    height: 100%;
+    row-gap: 0px; }
     .sidebar .sidebarContainer .sidebarTitleContainer {
       height: 100%;
       width: 100%;
@@ -531,16 +531,16 @@ html a {
       .sidebar .sidebarContainer .sidebarTitleContainer .sidebarTitle {
         color: #fff;
         font-family: "loveloBlack";
-        font-size: 2.18rem;
-        position: relative; }
+        position: relative;
+        font-size: 1.8rem; }
       .sidebar .sidebarContainer .sidebarTitleContainer .sidebarSubTitle {
         position: relative;
         color: #fff;
         font-family: "dosisRegular";
-        font-size: 1.25rem; }
+        font-size: 1rem; }
     .sidebar .sidebarContainer .sidebarFormContainer {
-      padding-left: 10%;
-      padding-right: 10%; }
+      padding-left: 2%;
+      padding-right: 2%; }
       .sidebar .sidebarContainer .sidebarFormContainer form {
         display: flex;
         flex-direction: column; }
@@ -551,33 +551,71 @@ html a {
           padding: 2px 10px;
           margin-bottom: 10px;
           font-family: "dosisRegular";
-          font-size: 0.93rem; }
+          font-size: 0.8rem; }
         .sidebar .sidebarContainer .sidebarFormContainer form textarea {
-          margin-bottom: 10px;
-          padding: 5px 10px;
-          height: 75px;
           resize: none;
-          font-family: "dosisRegular"; }
+          font-family: "dosisRegular";
+          height: 70px;
+          padding: 5px 10px;
+          margin-bottom: 10px;
+          font-size: 0.8rem; }
         .sidebar .sidebarContainer .sidebarFormContainer form select {
           padding: 5px 10px;
           font-family: "dosisRegular";
-          margin-bottom: 10px; }
+          margin-bottom: 10px;
+          font-size: 0.8rem; }
         .sidebar .sidebarContainer .sidebarFormContainer form .buttonSubmit {
-          border-radius: 10px;
-          margin-top: 20px;
-          padding: 10px 5px;
           background-color: #d4b2a7;
           color: #fff;
           border-color: #a38f85;
-          font-family: "dosisMedium"; }
+          font-family: "dosisMedium";
+          border-radius: 10px;
+          margin-top: 10px;
+          padding: 8px 0px;
+          font-size: .9rem; }
           .sidebar .sidebarContainer .sidebarFormContainer form .buttonSubmit:hover {
             background-color: #e7d7c9;
             color: #212121; }
       .sidebar .sidebarContainer .sidebarFormContainer .sidebarDescription {
-        padding-top: 15px;
         text-align: center;
         color: #fff;
-        font-family: "dosisRegular"; }
+        font-family: "dosisRegular";
+        padding-top: 10px;
+        font-size: .8rem; }
+
+@media only screen and (min-width: 1024px) {
+  .sidebar {
+    width: 38%; }
+    .sidebar .closeBtn {
+      right: 30px;
+      top: 15px;
+      font-size: 1.55rem; }
+    .sidebar .sidebarContainer {
+      grid-template-rows: 1fr 2fr;
+      row-gap: 40px; }
+      .sidebar .sidebarContainer .sidebarTitleContainer .sidebarTitle {
+        font-size: 2.18rem; }
+      .sidebar .sidebarContainer .sidebarTitleContainer .sidebarSubTitle {
+        font-size: 1.25rem; }
+      .sidebar .sidebarContainer .sidebarFormContainer {
+        padding-left: 10%;
+        padding-right: 10%; }
+        .sidebar .sidebarContainer .sidebarFormContainer form input {
+          font-size: 0.93rem; }
+        .sidebar .sidebarContainer .sidebarFormContainer form textarea {
+          height: 75px;
+          padding: 5px 10px;
+          margin-bottom: 10px;
+          font-size: 0.93rem; }
+        .sidebar .sidebarContainer .sidebarFormContainer form select {
+          font-size: 0.93rem; }
+        .sidebar .sidebarContainer .sidebarFormContainer form .buttonSubmit {
+          margin-top: 20px;
+          padding: 10px 5px;
+          font-size: 1rem; }
+        .sidebar .sidebarContainer .sidebarFormContainer .sidebarDescription {
+          padding-top: 15px;
+          font-size: 1rem; } }
 
 .sidebarClosed {
   animation: slideOutToRight .5s ease-out; }
