--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@
   grid-template-columns: 4fr .5fr;
   grid-template-rows: auto;
   grid-template-areas: "navBarTitleContainer navBarToggler" "A A" "B B";
-  row-gap: 10px;
   align-items: center; }
   .navBarContainer .navBarToggler {
     grid-area: navBarToggler;
@@ -893,59 +892,88 @@ html a {
   position: fixed;
   z-index: 5000;
   top: 150px;
-  left: 12%;
-  width: 76%;
+  left: 2%;
+  width: 96%;
   background-color: #ede9e3;
   border-radius: 20px;
   box-shadow: 0px 0px 13px 8px rgba(163, 143, 133, 0.35);
   -webkit-box-shadow: 0px 0px 13px 8px rgba(163, 143, 133, 0.35);
   -moz-box-shadow: 0px 0px 13px 8px rgba(163, 143, 133, 0.35);
   opacity: 0;
-  animation: fadeIn 1s ease-in-out forwards;
-  padding: 10px;
-  padding-bottom: 20px; }
+  animation: fadeIn 1s ease-in-out forwards; }
   .conventionsContainer .closeBtn {
     color: #a38f85;
     position: absolute;
-    right: 30px;
-    top: 20px;
+    right: 10px;
+    top: 5px;
     font-family: "LoveloBlack";
     cursor: pointer;
-    font-size: 1.25rem;
+    font-size: 1rem;
     z-index: 200; }
   .conventionsContainer h2 {
     text-align: center;
     font-family: "loveloBlack";
-    padding-top: 30px;
-    font-size: 1.87rem;
-    color: #a38f85; }
+    color: #a38f85;
+    padding-top: 10px;
+    font-size: 1.2rem; }
   .conventionsContainer h3 {
     text-align: center;
     font-family: "dosisRegular";
-    padding: 25px 0px;
-    font-size: 1.5rem;
-    color: #a38f85; }
+    color: #a38f85;
+    padding-top: 5px;
+    font-size: 1rem; }
   .conventionsContainer .conventionsDescriptionContainer {
-    padding: 10px 50px; }
+    padding: 5px 10px; }
     .conventionsContainer .conventionsDescriptionContainer .itemContainer {
       display: flex;
-      margin: 0px 20px 40px 20px; }
+      margin-bottom: 10px; }
       .conventionsContainer .conventionsDescriptionContainer .itemContainer .icon path {
         stroke: #a38f85; }
       .conventionsContainer .conventionsDescriptionContainer .itemContainer p {
-        margin-left: 20px;
         font-family: "dosisRegular";
-        font-size: 1.2rem; }
+        margin-left: 10px;
+        font-size: .8rem; }
     .conventionsContainer .conventionsDescriptionContainer .isapresContainer {
+      padding-top: 20px;
       display: flex;
       width: 100%;
       flex-wrap: wrap;
       justify-content: space-evenly; }
       .conventionsContainer .conventionsDescriptionContainer .isapresContainer img {
+        margin-bottom: 15px;
         max-width: 120px;
         transition: transform .5s; }
         .conventionsContainer .conventionsDescriptionContainer .isapresContainer img:hover {
           transform: scale(1.2); }
+
+@media only screen and (min-width: 1024px) {
+  .conventionsContainer {
+    top: 150px;
+    left: 12%;
+    width: 76%;
+    padding: 10px;
+    padding-bottom: 20px; }
+    .conventionsContainer .closeBtn {
+      right: 30px;
+      top: 15px;
+      font-size: 1.5rem; }
+    .conventionsContainer h2 {
+      padding-top: 30px;
+      font-size: 1.87rem; }
+    .conventionsContainer h3 {
+      padding: 25px 0px;
+      font-size: 1.5rem; }
+    .conventionsContainer .conventionsDescriptionContainer {
+      padding: 10px 50px; }
+      .conventionsContainer .conventionsDescriptionContainer .itemContainer {
+        margin: 0px 20px 40px 20px; }
+        .conventionsContainer .conventionsDescriptionContainer .itemContainer p {
+          margin-left: 20px;
+          font-size: 1.2rem; }
+      .conventionsContainer .conventionsDescriptionContainer .isapresContainer {
+        padding-top: 0px; }
+        .conventionsContainer .conventionsDescriptionContainer .isapresContainer img {
+          margin-bottom: 0px; } }
 
 .conventionsContainerClosed {
   animation: fadeOut 1s ease-in-out backwards; }
