--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   top: 0;
   width: 100%;
   padding-top: 30px;
-  padding-bottom: 10px;
+  padding-bottom: 30px;
   background-color: #e7d7c9;
   z-index: 10000;
   display: grid;
@@ -439,50 +439,76 @@ html a {
       font-size: 0.87rem; } }
 
 .frequentQuestionsContainer {
-  padding: 50px;
+  padding-top: 20px;
   position: relative; }
   .frequentQuestionsContainer .imgBackground {
-    height: 1090px;
-    max-height: 100%;
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    left: 55%; }
+    display: none; }
   .frequentQuestionsContainer .frequentQuestionsTitle {
     z-index: 2;
-    padding-bottom: 20px;
     text-align: center;
     font-family: "LoveloBlack";
-    font-size: 1.25rem; }
+    padding-bottom: 10px;
+    font-size: 1rem; }
   .frequentQuestionsContainer .questionContainer {
-    margin: 10px; }
+    margin-top: 15px; }
     .frequentQuestionsContainer .questionContainer .questionText {
       position: relative;
       z-index: 10;
-      font-size: 1.12rem;
-      font-family: "dosisRegular"; }
+      font-family: "dosisRegular";
+      font-size: .9rem; }
       .frequentQuestionsContainer .questionContainer .questionText:hover {
         color: #a38f85; }
   .frequentQuestionsContainer .answerContainer {
     position: relative;
     z-index: 200;
-    margin: 10px 0px;
-    padding: 10px 30px;
     background-color: #fff;
     border-top: 1px solid #e7d7c9;
-    border-bottom: 1px solid #e7d7c9; }
+    border-bottom: 1px solid #e7d7c9;
+    margin: 5px 0px;
+    padding: 5px 5px; }
     .frequentQuestionsContainer .answerContainer .answerText {
-      font-size: 1rem;
-      font-family: "dosisRegular"; }
+      font-family: "dosisRegular";
+      text-align: justify;
+      font-size: .8rem; }
   .frequentQuestionsContainer .frequentFootContainer {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    padding: 40px 70px 10px; }
+    padding: 30px 10px 5px; }
     .frequentQuestionsContainer .frequentFootContainer .frequentFootText {
       font-family: "dosisRegular";
       padding-bottom: 5px;
-      width: 60%; }
+      font-size: .8rem; }
+
+@media only screen and (min-width: 1024px) {
+  .frequentQuestionsContainer {
+    padding: 50px; }
+    .frequentQuestionsContainer .imgBackground {
+      display: block;
+      height: 1090px;
+      max-height: 100%;
+      z-index: 1;
+      position: absolute;
+      top: 0;
+      left: 55%; }
+    .frequentQuestionsContainer .frequentQuestionsTitle {
+      padding-bottom: 20px;
+      font-size: 1.25rem; }
+    .frequentQuestionsContainer .questionContainer {
+      margin: 10px; }
+      .frequentQuestionsContainer .questionContainer .questionText {
+        font-size: 1.12rem; }
+    .frequentQuestionsContainer .answerContainer {
+      margin: 10px 0px;
+      padding: 10px 30px; }
+      .frequentQuestionsContainer .answerContainer .answerText {
+        font-size: 1rem; }
+    .frequentQuestionsContainer .frequentFootContainer {
+      padding: 40px 70px 10px; }
+      .frequentQuestionsContainer .frequentFootContainer .frequentFootText {
+        padding-bottom: 5px;
+        width: 60%;
+        font-size: 1rem; } }
 
 .sidebar {
   position: fixed;
