--- a/scss/_articles.scss
+++ b/scss/_articles.scss
@@ -1,22 +1,22 @@
 .articleTextContainer{
-  margin:75px;
   position: relative;
   background-color: $cinereous;
   display: flex;
   flex-direction: column;
-  padding:30px 75px;
-  border-radius: 20px;
   opacity: 0;
   animation: fadeIn 1s ease-in-out forwards;
+  border-radius: 20px;
+  margin:4px;
+  padding:10px 15px;
   .closeBtn{
     color: $light;
     position: absolute;
-    right: 30px;
-    top: 20px;
+    right: 10px;
+    top: 5px;
     font-family: "LoveloBlack";
     cursor: pointer;
-    font-size: 1.25rem;
     z-index: 200;
+    font-size: 1rem;
   }
   &:before{
     border-radius: 20px;
@@ -30,7 +30,7 @@
     opacity: 0.3;
   }
   .parragraph{
-    padding: 10px 0px;
+    padding: 3px 0px;
     p{
       margin: 0;
       padding: 0;
@@ -39,21 +39,22 @@
   h2{
     text-align: center;
     font-family: "dosisSemiBold";
-    padding-bottom: 30px;
     color: $almond;
+    padding-bottom: 10px;
+    font-size: 1.2rem;
   }
   p{
-    font-size: 1.12rem;
-    padding: 10px 0px;
     text-align: justify;
     color: &light;
     position: relative;
     color: $light;
+    padding: 5px 0px;
+    font-size: .8rem;
   }
   .textFoot{
     color: $light;
-    padding-bottom: 0;
     text-align: end;
+    padding-bottom: 0;
   }
 }
 .article1{
@@ -114,6 +115,34 @@
 .article12{
   &:before{
     background-image: url("../src/images/article12Image.jpg");
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .articleTextContainer{
+    margin:75px;
+    padding:30px 75px;
+    .closeBtn{
+      right: 30px;
+      top: 15px;
+      font-size: 1.5rem;
+    }
+    &:before{
+    }
+    .parragraph{
+      padding: 10px 0px;
+      p{
+        font-size: 1.12rem;
+        padding: 10px 0px;
+      }
+    }
+    h2{
+      padding-bottom: 30px;
+      font-size: 2rem;
+    }
+    p{
+      font-size: 1rem;
+    }
   }
 }
 
