--- a/scss/_section3.scss
+++ b/scss/_section3.scss
@@ -21,8 +21,7 @@
   }
   .professionalsContainer{
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;  
     .professionalContainer{
       position: relative;
       display: flex;
@@ -31,8 +30,8 @@
       justify-content: center;
     }
     .maidaContainer{
-      width: 100%;
-      height: calc(100vw / 0.75);
+      width: 47vw;
+      height: calc(47vw / 0.75);
       border-radius: 10px;
       background-image: url("../src/images/magda.jpeg");
       background-size:contain;
@@ -42,8 +41,8 @@
       }
     }
     .cokeContainer{
-      width: 100%;
-      height: calc(100vw / 0.75);
+      width: 47vw;
+      height: calc(47vw / 0.75);
       background-image: url("../src/images/jorge.jpeg");
       border-radius: 10px;
       background-size: contain;
@@ -91,7 +90,7 @@
     justify-content: center;
     video{
       width: 80%;
-      height: calc(100vw / 1.6);
+      height: 50vw;
       border-radius: 20px;
       object-fit: fill;
     }
