--- a/scss/_section3.scss
+++ b/scss/_section3.scss
@@ -55,19 +55,21 @@
       margin: 10px;
       background-color: rgba(163, 143, 133, .5);
       border-radius: 10px;
-      padding-left: 20px;
-      padding-right: 20px;
+      padding-left: 5px;
+      padding-right: 5px;
+      padding-bottom: 5px;
+      margin-bottom: 50px;
       .professionalName{
         font-family: "loveloBlack";
-        padding: 5px 10px;
-        font-size: 1rem;
+        padding: 5px;
+        font-size: .8rem;
         color: $light;
         text-align: center;
       }
       .professionalDescription{
         font-family: "dosisSemiBold";
-        padding-bottom: 10px;
-        font-size: .8rem;
+        padding-bottom: 2px;
+        font-size: .7rem;
         color: $isabeline;
         text-align: center;
       }
@@ -137,7 +139,8 @@
           font-size: 1.18rem;
         }
         .professionalDescription{
-          font-size: 1rem;
+        padding-bottom: 5px;
+        font-size: 1rem;
         }
       }
     }
