--- a/src/App.css
+++ b/src/App.css
@@ -308,18 +308,20 @@ html a {
       margin: 10px;
       background-color: rgba(163, 143, 133, 0.5);
       border-radius: 10px;
-      padding-left: 20px;
-      padding-right: 20px; }
+      padding-left: 5px;
+      padding-right: 5px;
+      padding-bottom: 5px;
+      margin-bottom: 50px; }
       .section3Container .professionalsContainer .professionalDescriptionContainer .professionalName {
         font-family: "loveloBlack";
-        padding: 5px 10px;
-        font-size: 1rem;
+        padding: 5px;
+        font-size: .8rem;
         color: #fff;
         text-align: center; }
       .section3Container .professionalsContainer .professionalDescriptionContainer .professionalDescription {
         font-family: "dosisSemiBold";
-        padding-bottom: 10px;
-        font-size: .8rem;
+        padding-bottom: 2px;
+        font-size: .7rem;
         color: #ede9e3;
         text-align: center; }
       .section3Container .professionalsContainer .professionalDescriptionContainer .seeMore {
@@ -372,6 +374,7 @@ html a {
           padding: 5px 15px;
           font-size: 1.18rem; }
         .section3Container .professionalsContainer .professionalDescriptionContainer .professionalDescription {
+          padding-bottom: 5px;
           font-size: 1rem; }
     .section3Container .quoteContainer {
       margin-top: 50px;
