--- a/scss/_conventions.scss
+++ b/scss/_conventions.scss
@@ -31,8 +31,8 @@
   h3{
     text-align: center;
     font-family: "dosisRegular";
-    color: $cinereous;
-    padding-top: 5px;
+    color: $cinereous;    
+    padding: 10px 0px;
     font-size: 1rem;
   }
   .conventionsDescriptionContainer{
@@ -56,8 +56,8 @@
       flex-wrap: wrap;
       justify-content: space-evenly;
       img{
-        margin-bottom: 15px;
-        max-width: 120px;
+        margin:10px 5px;
+        max-width: 100px;
         transition: transform .5s;
         &:hover{
           transform: scale(1.2);
