--- a/scss/_section3.scss
+++ b/scss/_section3.scss
@@ -82,6 +82,7 @@
     }
   }
   .quoteContainer{
+    text-align: center;
     margin-top: 10px;
     padding-right: 20px;
     padding-left: 20px;
@@ -95,6 +96,17 @@
       height: 50vw;
       border-radius: 20px;
       object-fit: fill;
+    }
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .section3Container{
+    .videoContainer{
+      video{
+        width: 320px;
+        height: 200px;
+      }
     }
   }
 }
@@ -146,7 +158,6 @@
     }
     .quoteContainer{
       margin-top: 50px;
-      text-align: center;
       font-size: 1rem
     }
     .videoContainer{
